Fix nav wrapping on mobile

--- a/queries.css
+++ b/queries.css
@@ -11,7 +11,7 @@
   }
 
   nav {
-    font-size: 2.5vw;
+    font-size: 2vw;
     grid-area: nav;
     margin: 10px auto;
   }
@@ -21,7 +21,7 @@
     margin: auto;
     border-left: 1px solid black;
     border-right: 1px solid black;
-    width: 18vw;
+    width: 14vw;
     text-align: center;
   }
 
